@@ -1,4 +1,11 @@
 --------------------------------------------------------------------------------
+ OSM2World 0.1.9                                                     ????-??-?? 
+--------------------------------------------------------------------------------
+ 
+ * correct rendering of covered ways through buildings
+ 
+ 
+--------------------------------------------------------------------------------
  OSM2World 0.1.8                                                     2011-11-09 
 --------------------------------------------------------------------------------
  
